View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0028229 | Open CASCADE | OCCT:Modeling Data | public | 2016-12-16 10:22 | 2020-12-02 17:11 |
Reporter | Assigned To | bugmaster | |||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Product Version | 7.1.0 | ||||
Target Version | 7.5.0 | Fixed in Version | 7.5.0 | ||
Summary | 0028229: BRep_Builder::Transfert must not raise exception if the input edge is Locked | ||||
Description | There is no reason to raise exception TopoDS_LockedShape in the method BRep_Builder::Transfert if the input edge is locked. It is simply needed to replace TE->ChangeCurves() with TE->Curves(), and no more methods modifying "Ein" are called. | ||||
Steps To Reproduce | Not required | ||||
Tags | No tags attached. | ||||
Test case number | Not required | ||||
|
Branch CR28229 has been created by ifv. SHA-1: f6a2c2e9700913286ccf28c671ea3e7f936ac6ae Detailed log of new commits: Author: ifv Date: Fri Apr 17 10:02:34 2020 +0300 0028229: BRep_Builder::Transfert must not raise exception if the input edge is Locked BRep/BRep_Builder.cxx : raising exception is removed |
|
Branch CR28229 is ready for review |
|
For integration: occt - CR28229 products - none |
|
OCCT branch : IR-2020-05-22 master SHA - ae58f70718a089f84178d45a1bf9bee586d52d80 a206de37fbfa0bf71bd534ae47192bbec23b8522 Products branch : IR-2020-05-22 SHA - 454ac05077d8a84cd61adbfc32a89c7a61a67e10 was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Debian80-64: OCCT Total CPU difference: 17169.13000000018 / 17197.13000000017 [-0.16%] Products Total CPU difference: 11217.810000000067 / 11198.660000000078 [+0.17%] Windows-64-VC14: OCCT Total CPU difference: 18640.75 / 18655.984375 [-0.08%] Products Total CPU difference: 13006.1875 / 13006.671875 [-0.00%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
|
Branch CR28229 has been deleted by inv. SHA-1: f6a2c2e9700913286ccf28c671ea3e7f936ac6ae |
Date Modified | Username | Field | Change |
---|---|---|---|
2016-12-16 10:22 |
|
New Issue | |
2016-12-16 10:22 |
|
Assigned To | => msv |
2017-07-20 15:30 |
|
Target Version | 7.2.0 => 7.3.0 |
2017-12-05 17:01 |
|
Target Version | 7.3.0 => 7.4.0 |
2019-08-12 16:37 |
|
Target Version | 7.4.0 => 7.5.0 |
2020-04-17 10:03 | git | Note Added: 0091606 | |
2020-04-17 10:15 |
|
Assigned To | msv => ifv |
2020-04-17 10:15 |
|
Status | new => assigned |
2020-04-17 12:23 |
|
Note Added: 0091627 | |
2020-04-17 12:23 |
|
Assigned To | ifv => msv |
2020-04-17 12:23 |
|
Status | assigned => resolved |
2020-04-17 12:23 |
|
Steps to Reproduce Updated | |
2020-05-19 15:50 |
|
Note Added: 0092257 | |
2020-05-19 15:50 |
|
Assigned To | msv => bugmaster |
2020-05-19 15:50 |
|
Status | resolved => reviewed |
2020-05-23 12:45 | bugmaster | Note Added: 0092311 | |
2020-05-23 12:45 | bugmaster | Status | reviewed => tested |
2020-05-23 12:49 | bugmaster | Test case number | => Not required |
2020-05-23 12:52 | bugmaster | Changeset attached | => occt master 8189cc72 |
2020-05-23 12:52 | bugmaster | Status | tested => verified |
2020-05-23 12:52 | bugmaster | Resolution | open => fixed |
2020-05-30 12:26 | git | Note Added: 0092418 | |
2020-12-02 16:40 |
|
Fixed in Version | => 7.5.0 |
2020-12-02 17:11 |
|
Status | verified => closed |