0028229: BRep_Builder::Transfert must not raise exception if the input edge is Locked

BRep/BRep_Builder.cxx : raising exception is removed